# TIN-SensorManager

AdministratorClient/: .gitignore  pom.xml
AdministratorClient/src/main/java/tin/administrator/: AdministratorApp.java  MockupTestingConnection.java
AdministratorClient/src/main/java/tin/administrator/communication/: ClientHandler.java  ClientHandlerString.java  Communication.java  CommunicationManager.java  CommunicationNetty.java  ConnectionUtil.java
AdministratorClient/src/main/java/tin/administrator/controller/: Controller.java  LabelRefresher.java  ResponseExecutor.java  SensorTableRefreshTask.java
AdministratorClient/src/main/java/tin/administrator/model/: AdministratorModel.java  Sensor.java  SensorTable.java
AdministratorClient/src/main/resources/: AdministratorLayout.fxml
AdministratorClient/src/test/java/tin/administrator/communication/: ClientHandlerTest.java  CommunicationManagerTest.java  CommunicationTest.java  ConnectionUtilTest.java
Common/: BytesParser.h  ClientsHandler.cpp  ClientsHandler.h  ConnectionException.cpp  ConnectionException.h  DoubleMeasurement.cpp  DoubleMeasurement.h  IClientsHandler.cpp  IClientsHandler.h  IMeasurement.h  IRequestListener.cpp  IRequestListener.h  NetworkUtils.cpp  NetworkUtils.h  SslClientsHandler.cpp  SslClientsHandler.h  SystemUtils.cpp  SystemUtils.h  UserPrefs.cpp  UserPrefs.h
MonitoringClient/: .gitignore  pom.xml
MonitoringClient/src/main/java/tin/monitoring/: MockupTestingConnection.java  MonitoringApp.java
MonitoringClient/src/main/java/tin/monitoring/communication/: ClientHandler.java  CommunicationManager.java  ConnectionUtil.java
MonitoringClient/src/main/java/tin/monitoring/controller/: Controller.java  SensorTableRefreshTask.java
MonitoringClient/src/main/java/tin/monitoring/model/: Measurement.java  MonitoringModel.java  ResponseExecutor.java  Sensor.java  SensorTable.java
MonitoringClient/src/main/resources/: MonitoringLayout.fxml
SensorClient/: .gitignore  CMakeLists.txt
SensorClient/src/: BytesParser.h  DoubleMeasurement.cpp  DoubleMeasurement.h  IMeasurement.h  INetworkManager.h  INetworkStateListener.h  MeasureReader.cpp  MeasureReader.h  NetworkListener.cpp  NetworkListener.h  NetworkManager.cpp  NetworkManager.h  NewNetworkManager.cpp  NewNetworkManager.h  main.cpp
Server/: .gitignore  CMakeLists.txt
Server/src/: AdministratorListener.cpp  AdministratorListener.h  BytesParser.h  ClientsHandler.cpp  ClientsHandler.h  ConnectionException.cpp  ConnectionException.h  ConnectionsManager.cpp  ConnectionsManager.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseManager.cpp  DatabaseManager.h  IClientsHandler.cpp  IClientsHandler.h  IConnectionsManager.h  IDatabaseConnection.h  IDatabaseManager.h  IMeasurement.h  IModelForSensor.h  IRequestListener.cpp  IRequestListener.h  ISensorConnectionHandler.cpp  ISensorConnectionHandler.h  Measurement.h  MonitoringListener.cpp  MonitoringListener.h  NetworkUtils.cpp  NetworkUtils.h  Sensor.h  SensorConnectionHandler.cpp  SensorConnectionHandler.h  SensorMeasurement.h  SystemUtils.cpp  SystemUtils.h  main.cpp
Server/src/commandTypes/: AdministratorCommandTypes.h  MonitoringCommandTypes.h  SensorCommandTypes.h
Server/src/database/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseManager.cpp  DatabaseManager.h  IDatabaseConnection.h  IDatabaseManager.h  MockDatabaseConnection.cpp  MockDatabaseConnection.h  MockDatabaseManager.cpp  MockDatabaseManager.h
Server/src/listeners/: AdministratorListener.cpp  AdministratorListener.h  MonitoringListener.cpp  MonitoringListener.h  SensorListener.cpp  SensorListener.h
Server/src/requests/: AdministratorRequest.h  MonitoringRequest.h  Request.h  SensorRequest.h
Server/src/responses/: AdministratorResponse.h  MonitoringResponse.h  Response.h
Server/src/serializers/: SerializerAdministratorMessage.cpp  SerializerAdministratorMessage.h  SerializerMessage.cpp  SerializerMessage.h  SerializerMonitoringMessage.cpp  SerializerMonitoringMessage.h  SerializerSensorMessage.cpp  SerializerSensorMessage.h
Server/src/serverModel/: IModelForAdministrator.h  IModelForMonitoring.h  IModelForSensor.h  Queue.h  ServerModel.cpp  ServerModel.h
docs/: MonitoringFlow.drawio  TIN Dokumentacja.docx  TIN-dokuemntacja finalna.docx
