cmake_minimum_required(VERSION 3.15)
project(sensor)
set(CMAKE_CXX_STANDARD 20)
add_executable(sensor src/main.cpp src/NetworkManager.cpp ../Common/DoubleMeasurement.cpp ../Common/SystemUtils.cpp ../Common/NetworkUtils.cpp ../Common/ConnectionException.cpp)
target_include_directories(sensor PRIVATE ../Common)
if(WIN32)
    target_link_libraries(sensor wsock32 ws2_32)
endif()